...
                android:textStyle="bold"
                android:textSize="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_input"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password"
                android:alpha="0.7"
...
            </LinearLayout>

            <Button
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up_submit_btn"
                android:layout_marginBottom="20dp"
                android:text="Submit"
                android:textSize="30dp"/>



...
